--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .gradle
 /build/
 !gradle/wrapper/gradle-wrapper.jar
+/bin/
 
 ### STS ###
 .apt_generated
@@ -24,3 +25,6 @@
 /dist/
 /nbdist/
 /.nb-gradle/
+
+/src/main/resources/static/css
+/.sass-cache/
