--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,19 @@ buildscript {
 	}
 	repositories {
 		mavenCentral()
+		jcenter()
+		maven { url "http://dl.bintray.com/robfletcher/gradle-plugins" }
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+		classpath "com.github.robfletcher:compass-gradle-plugin:2.0.6"
 	}
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: "com.github.robfletcher.compass"
 
 group = 'com.ericdallo'
 version = '0.0.1-SNAPSHOT'
@@ -22,12 +26,18 @@ archivesBaseName = 'btgclicksign'
 
 repositories {
 	mavenCentral()
+	jcenter()
+}
+
+compass {
+    cssDir = file "src/main/resources/static/css"
+    sassDir = file "src/main/resources/sass"
 }
 
 dependencies {
 	compile "org.springframework.boot:spring-boot-starter-web"
 	compile "org.springframework.boot:spring-boot-starter-thymeleaf"
-	compile "org.springframework.boot:spring-boot-devtools"
+	compile "org.thymeleaf.extras:thymeleaf-extras-java8time"
 	compile "com.github.ljtfreitas:java-restify-spring-starter:1.6.4"
 	compile "com.github.ljtfreitas:java-restify-spring-autoconfigure:1.6.4"
 		
