--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 !gradle/wrapper/gradle-wrapper.jar
 /bin/
 src/main/resources/static/bower_components/
+!src/main/resources/static/bower_components/ajax-amd/ajax.min.js
+!src/main/resources/static/bower_components/async-define/async-define.min.js
 
 ### STS ###
 .apt_generated
