--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 		classpath "com.github.robfletcher:compass-gradle-plugin:2.0.6"
+		classpath 'com.craigburke.gradle:client-dependencies:1.4.1'
 	}
 }
 
@@ -17,6 +18,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: "com.github.robfletcher.compass"
+apply plugin: 'com.craigburke.client-dependencies'
 
 group = 'com.ericdallo'
 version = '0.0.1-SNAPSHOT'
@@ -32,6 +34,17 @@ repositories {
 compass {
     cssDir = file "src/main/resources/static/css"
     sassDir = file "src/main/resources/sass"
+}
+
+clientDependencies {
+	installDir = 'src/main/resources/static/js/vendor'
+	
+    bower {
+        "events-amd" ("1.1.3")
+        "async-define" ("https://github.com/elo7/async-define.git#v1.2.0")
+        "ajax-amd" ("1.3.5")
+    	"doc-amd" ("1.4.0")
+    }
 }
 
 dependencies {
