--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ buildscript {
 }
 
 apply plugin: 'java'
+apply plugin: 'maven'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: "com.github.robfletcher.compass"
@@ -25,6 +26,12 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 archivesBaseName = 'btgclicksign'
+
+jar {
+  manifest {
+    attributes 'Main-Class' : 'com.ericdallo.btgclicksign.BtgclicksignApplication'
+  }
+}
 
 repositories {
 	mavenCentral()
@@ -62,5 +69,5 @@ bootRun {
 	addResources = true;
 }
 
-build.dependsOn compassCompile
-build.dependsOn clientInstall
+tasks.compileJava.dependsOn compassCompile
+tasks.compileJava.dependsOn clientInstall
