--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 server.port=7000
 restify.clicksignAPI.endpoint=https://sandbox.clicksign.com/api/v1
 spring.thymeleaf.cache=false
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://mysql/btgclicksign
+spring.datasource.username=root
+spring.datasource.password=
