--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 !gradle/wrapper/gradle-wrapper.jar
 /bin/
 src/main/resources/static/js/vendor/
+src/main/resources/application.properties
 
 ### STS ###
 .apt_generated
