Fix ruby version

--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,8 @@ clientDependencies {
     }
 }
 
+configurations.all { resolutionStrategy.force 'rubygems:rb-inotify:0.9.7' }
+
 dependencies {
 	compile "org.springframework.boot:spring-boot-starter-web"
 	compile "org.springframework.boot:spring-boot-starter-thymeleaf"
